packages using BLAS (KernSmooth, bqtl, fracdiff, gss, quadprog and
quantreg amongst those on CRAN) need to be re-built.  The advantage is
that less space is taken up overall, and ATLAS can be used just by
rebuilding Rblas.dll.

The installers now use bzip compression, so make smaller packages
(which take a little longer to install).

Cross-building automatically uses STAMP=NO for packages.

R can now be built in a directory whose path contains spaces (although
we still don't recommend it).

Rcmd INSTALL and make pkg-foo test for attempted installation into the
source directory.



rw1041
======

Updating HTML indices, e.g. in help.start(), is done within a 
try() construct.

help.start() has a new argument `update'.

Making packages now warns if there is a configure script.

ga.h was needed for building package `windlgs', but was omitted from the
`source package' code for rw1040. It is now included.



rw1040
======

If --max-mem-size is given a value greater than 256M, the requested
maximum memory is reserved (but not allocated) initially.  This will
enable the memory to be managed more efficiently, but does increase
the chance that R cannot be started.  There appears to be an effective
limit of about 1700M, at least under Windows 2000.

memory.limit() can now increase the memory limit of the current session.
This will not work if the limit is currently reached!

internet2.dll (see changes for rw1030) must be selected by the
--internet2 flag.can

The miniR* distribution has grown to seven floppies, and no attempt is
now made to confine the zip files to floppy-size.

The background colour of a windows() window (outside the device
region) is now in the `Application Background' colour of the current
Windows colour scheme.  (It used to be LightGrey.)

Gamma correction is now applied to the background colour of a graphics
window.  (It has long been applied to the foreground colours.)  Users
of LCD screens may want to set something like gamma=2 when launching a