@@ -1,8 +1,20 @@
 #-*- Makefile -*-
-.SUFFIXES: .c .cc .cpp .C .f .o .a .def .exp .dll .exe .d
 
-# Alternatives MINGW (mingw32 gcc), CROSS (Linux)
+## ===== configuration macros for building packages or R  ===============
+
+# Alternatives MINGW (mingw), CROSS (Linux)
 BUILD=MINGW
+
+HELP = YES
+WINHELP =  CHM # NO, CHM, BOTH
+
+## ============== configuration macros for building R ===================
+
+LEA_MALLOC=YES
+
+# Set to YES and specify the path if you want to use the ATLAS BLAS.
+USE_ATLAS=NO
+ATLAS_PATH=/R/ATLAS/lib/WinNT_PII
 
 # Where does 'HTML Help Workshop' live? (unused if compiled HTML help is
 # not requested. Spaces allowed.)
@@ -11,6 +23,15 @@ HHWDIR=C:/Program Files/HTML Help Workshop
 # Where does Tcl/Tk live? Spaces allowed.
 TCL_HOME = c:/packages/Tcl
 TCL_VERSION = 83
+
+## ====== configuration macros for building installers ===========
+
+# location where Inno Setup was installed
+ISDIR=C:/packages/Inno
+# location where zip files of binary packages are kept
+PKGS=C:/R/Rdist/libs
+
+## =============== end of user-customizable parts  ===================
 
 ifeq ($(strip $(BUILD)),MINGW)
 BINPREF=
@@ -52,6 +73,8 @@ NM=$(BINPREF)nm
 CPP=$(CC) -E
 RESCOMP=$(BINPREF)windres
 
+.SUFFIXES: .c .cc .cpp .C .f .o .a .def .exp .dll .exe .d
+
 .c.d:
 	@echo "making $@ from $<"
 	@$(CC) -M $(CFLAGS) $($*-CFLAGS) $< -o $@
@@ -74,7 +97,6 @@ RESCOMP=$(BINPREF)windres
 %.exe:
 	$(LINKER) $(LINKFLAGS) $($*-LINKFLAGS) -o $@ $^ $($*-LIBS) $(LIBS)
 
-
 %.dll %.def:
 	@$(ECHO) ------- Building $@ from $^ --------
 	$(ECHO) LIBRARY $* > $*.def
@@ -84,7 +106,6 @@ RESCOMP=$(BINPREF)windres
 	$(RM) Defs
 	$(DLL) --shared $(DLLFLAGS) $($*-DLLFLAGS) -o $@ $*.def $^ $($*-DLLLIBS) $(DLLLIBS)
 
-
 lib%.a: %.def
 	@$(ECHO) -------- Building $@ from $^ --------
 	$(DLLTOOL) $(DLLTOOLFLAGS) $($*-DLLTOOLFLAGS) --dllname $*.dll --def $*.def --output-lib lib$*.a
@@ -93,7 +114,6 @@ lib%.a: %.def
 	@$(ECHO) -------- Building $@ from $^ --------
 	$(AR) cr $@ $^
 	$(RANLIB) $@
-
 
 %.o: %.rc
 	$(RESCOMP) $(RESFLAGS) $($*-RESFLAGS) -i $< -o $@
