@@ -7,16 +7,9 @@ all: SetupR.exe miniR.exe
 clean: ISclean
 distclean: ISdistclean
 
-#======================================================================
-
 # section for JR software installer.
 
 RECOMMENDED=KernSmooth VR boot cluster foreign mgcv nlme rpart survival
-IS: SetupR.exe
-# location where Inno Setup was installed
-ISDIR=C:/packages/Inno
-# location where binary packages are kept
-PKGS=C:/R/Rdist/libs
 
 R.iss: JRins.pl ../$(RPREFIX)b.zip ../$(RPREFIX)h.zip \
 ../$(RPREFIX)ch.zip ../$(RPREFIX)d1.zip ../$(RPREFIX)d2.zip \
